<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:layout_centerInParent="true"
    tools:context=".activities.signInActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mikeyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/text_mikeyboo_nails"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:textSize="@dimen/text_mikeyboo_nails_size"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/address_margin_top"
        android:text="@string/address_text"
        android:textSize="@dimen/text_address_size"
        android:textStyle="bold"
        android:layout_below="@id/mikeyText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginTop="@dimen/signin_screen_btn"
        android:backgroundTint="@color/white"
        android:text="@string/signin_btn"
        android:textColor="@color/pink"
        android:textSize="@dimen/signup_btn_size_text"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/frame_width" />

    <EditText
        android:layout_marginTop="@dimen/margin_edit_text"
        android:id="@+id/userName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_edit_text"
        android:textAlignment="center"
        android:background="@color/white"
        android:layout_below="@id/signin"
        android:layout_centerInParent="true"
        android:hint="@string/username_text"
        />


    <EditText
        android:layout_marginTop="@dimen/margin_edit_text"
        android:id="@+id/password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_edit_text"
        android:textAlignment="center"
        android:background="@color/white"
        android:layout_below="@id/userName"
        android:layout_centerInParent="true"
        android:hint="@string/password_text"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/address_margin_top"
        android:backgroundTint="@color/white"
        android:textColor="@color/pink"
        android:text="שלח"
        android:textSize="@dimen/text_address_size"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/frame_width"
        />

</RelativeLayout>