<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".signupActivity">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mikeyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:text="@string/text_mikeyboo_nails"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_text_mikeyboo_nails"
            android:textSize="@dimen/text_mikeyboo_nails_size"
            android:textStyle="bold"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/address_margin_top"
            android:text="@string/address_text"
            android:textSize="@dimen/text_address_size"
            android:textStyle="bold"
            android:layout_below="@id/mikeyText"/>

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="@dimen/width_navigation"
            android:layout_height="@dimen/height_mikeyboo_nails"
            android:layout_below="@+id/address"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/navigation_margin"
            android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/instagram_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_navigation"
                    android:src="@drawable/instagram" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/whatsapp_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_navigation"
                    android:src="@drawable/whatsapp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_navigation"
                    android:clickable="true"
                    android:src="@drawable/phone_call" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/googleMap_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_navigation"
                    android:src="@drawable/placeholder" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_screen_btn"
            android:layout_below="@+id/navigation"
            android:text="@string/signup_btn"
            android:textSize="@dimen/signup_btn_size_text"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/frame_width"
            android:textColor="@color/pink"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/margin_edit_text_signup"
            android:id="@+id/name"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/height_edit_text"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_below="@+id/signup"
            android:layout_centerInParent="true"
            android:hint="@string/full_name"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/margin_edit_text_signup"
            android:id="@+id/mail"
            android:layout_width="@dimen/edit_text_width"
            android:layout_below="@+id/name"
            android:layout_height="@dimen/height_edit_text"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:hint="@string/mail"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/margin_edit_text_signup"
            android:id="@+id/phoneNumber"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/height_edit_text"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_centerInParent="true"
            android:layout_below="@id/mail"
            android:hint="@string/phone_edit_text"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/margin_edit_text_signup"
            android:id="@+id/userName"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/height_edit_text"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_below="@id/phoneNumber"
            android:layout_centerInParent="true"
            android:hint="@string/username_text"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/margin_edit_text_signup"
            android:id="@+id/password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/height_edit_text"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_below="@id/userName"
            android:layout_centerInParent="true"
            android:hint="@string/password_text"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="שלח"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_address_size"
            android:textStyle="bold"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/frame_width" />


</RelativeLayout>