<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="@dimen/width_list_of_plus"
        android:layout_height="@dimen/height_list_plus"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_gravity="bottom|end"
        android:layout_above="@+id/fab_plus"
        android:layout_alignParentRight="true"

        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:textSize="20sp"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@color/white"
            android:textColor="@color/pink"
            android:textStyle="bold"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            android:text="@string/changeOrCancel"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_plus"
        android:layout_width="@dimen/width_plus"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/margin_plus"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mikeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_text_mikeyboo_nails"
                android:text="@string/text_mikeyboo_nails"
                android:textSize="@dimen/text_mikeyboo_nails_size"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/address_margin_top"
                android:text="@string/address_text"
                android:textSize="@dimen/text_address_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/navigation"
                android:layout_width="@dimen/width_navigation"
                android:layout_height="@dimen/height_mikeyboo_nails"
                android:layout_marginTop="@dimen/navigation_margin"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/instagram_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_each_icon"
                    android:src="@drawable/instagram" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/whatsapp_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_each_icon"
                    android:src="@drawable/whatsapp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_each_icon"
                    android:clickable="true"
                    android:src="@drawable/phone_call" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/googleMap_icon"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_mikeyboo_nails"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_each_icon"
                    android:src="@drawable/placeholder" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/worksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/address_margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_gravity="end"
                android:text="@string/works"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/works"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
            </LinearLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_do_today_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_marginTop="@dimen/address_margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_gravity="end"
                android:textSize="30sp"
                android:textStyle="bold"                />

            <LinearLayout
                android:id="@+id/list_of_options1"
                android:layout_width="@dimen/width_list_of_options"
                android:layout_height="@dimen/heigth_list_of"
                android:layout_marginTop="@dimen/margin_right"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lak_gel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_120"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/textview_between"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/milui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_140"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/textview_between"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menikur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/_60"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_of_options2"
                android:layout_width="@dimen/width_list_of_options"
                android:layout_height="@dimen/heigth_list_of"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tikun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_100"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/textview_between"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hasara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_40"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/textview_between"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tzior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_15_40"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_of_options3"
                android:layout_width="@dimen/list_of_options"
                android:layout_height="@dimen/heigth_list_of"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bnia_hadash"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_270"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_of_list"
                    android:textStyle="bold"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/frame_width"/>
            </LinearLayout>
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>
</RelativeLayout>