<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mikeyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/text_mikeyboo_nails"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:textSize="@dimen/text_mikeyboo_nails_size"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/address_margin_top"
        android:text="@string/address_text"
        android:textSize="@dimen/text_address_size"
        android:textStyle="bold"
        android:layout_below="@id/mikeyText"/>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="@dimen/width_navigation"
        android:layout_centerInParent="true"
        android:layout_below="@+id/address"
        android:layout_height="@dimen/height_mikeyboo_nails"
        android:layout_marginTop="@dimen/navigation_margin"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/instagram_icon"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_mikeyboo_nails"
            android:layout_weight="1"
            android:padding="@dimen/padding_each_icon"
            android:src="@drawable/instagram" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/whatsapp_icon"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_mikeyboo_nails"
            android:layout_weight="1"
            android:padding="@dimen/padding_each_icon"
            android:src="@drawable/whatsapp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/phone_icon"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_mikeyboo_nails"
            android:layout_weight="1"
            android:padding="@dimen/padding_each_icon"
            android:clickable="true"
            android:src="@drawable/phone_call" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/googleMap_icon"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_mikeyboo_nails"
            android:layout_weight="1"
            android:padding="@dimen/padding_each_icon"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_below="@id/navigation"
        android:id="@+id/signup"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_signin_screen"
        android:text="@string/signup_btn"
        android:textSize="@dimen/signup_btn_size_text"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/frame_width"
        android:textColor="@color/pink"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginTop="@dimen/margin_top_login_screen"
        android:backgroundTint="@color/white"
        android:text="@string/signin_btn"
        android:textColor="@color/pink"
        android:textSize="@dimen/signup_btn_size_text"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/frame_width" />

</RelativeLayout>